@@ -4,6 +4,6 @@ public class ArticleIsNullException extends RuntimeException {
 
     public ArticleIsNullException(String productName) {
 
-        super(String.format("Статья про продукт $s не создана. Создайте статью!", productName));
+        super("Статья про продукт %s не создана. Создайте статью!".formatted(productName));
     }
 }
